--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -1,18 +1,18 @@
-name: Deploy main
+name: CI main
 on:
   push:
     branches: [ develop ]
 jobs:
-  job1:
+  main:
     name: Pruebas unitarias 
     runs-on: ubuntu-latest
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v4
     - name: Configuración de entorno de python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-          python-version: '3.7.17'
+          python-version: '3.17'
     - name: Instalación de librerías y dependencias
       run: |
         python -m pip install --upgrade pip
