--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout de repositorio
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
     - name: Configuración de entorno de python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-          python-version: '3.8.0'
+        python-version: "3.13"
     - name: Instalación de librerías y dependencias
       run: |
         python -m pip install --upgrade pip
