Se ajusta nombre de rama [run-release]

--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v5
-    - name: Configuración de entorno de python
+    - name: Configuración de entorno desarrollo python
       uses: actions/setup-python@v5
       with:
         python-version: "3.13"
