--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -8,16 +8,36 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, '[run-release]')
     steps:
+    - name: Extraer versión del commit
+      id: extract-version
+      run: |
+        COMMIT_MSG="${{ github.event.head_commit.message }}"
+        echo "Mensaje del commit: $COMMIT_MSG"
+        
+        # Buscar patrón [run-release:x.y.z] en el mensaje
+        if [[ $COMMIT_MSG =~ \[run-release:([0-9]+\.[0-9]+\.[0-9]+)\] ]]; then
+          VERSION="${BASH_REMATCH[1]}"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Versión encontrada: $VERSION"
+        else
+          echo "No se encontró versión válida en el mensaje del commit"
+          echo "Formato esperado: [create-release:1.2.0]"
+          exit 1
+        fi
+
     - name: Checkout de repositorio
       uses: actions/checkout@v5
+
     - name: Configuración de entorno desarrollo python
       uses: actions/setup-python@v5
       with:
         python-version: "3.13"
+
     - name: Instalación de librerías y dependencias
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Correr pruebas
       id: correr-pruebas
       run: python -m unittest discover -s tests -v
