--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -3,10 +3,12 @@ on:
   push:
     branches: [ develop ]
 jobs:
-  main:
-    name: Pruebas 
+  check-release:
+    name: Verificar trigger de release 
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, 'run-release')
+    outputs:
+      version: ${{ steps.extract-version.outputs.version }}
     steps:
     - name: Extraer versión del commit
       id: extract-version
@@ -25,19 +27,12 @@ jobs:
           exit 1
         fi
 
-    - name: Checkout de repositorio
+  create-release:
+    name: Crear rama release
+    runs-on: ubuntu-latest
+    needs: check-release-trigger
+    if: needs.check-release.outputs.version != ''
+
+    steps:
+    - name: Checkout repositorio
       uses: actions/checkout@v5
-
-    - name: Configuración de entorno desarrollo python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.13"
-
-    - name: Instalación de librerías y dependencias
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Correr pruebas
-      id: correr-pruebas
-      run: python -m unittest discover -s tests -v
