Se ajusta lanzamiento pipeline release [run-release:1.0.0]

--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -30,7 +30,7 @@ jobs:
   create-release:
     name: Crear rama release
     runs-on: ubuntu-latest
-    needs: check-release-trigger
+    needs: check-release
     if: needs.check-release.outputs.version != ''
 
     steps:
