--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -36,3 +36,14 @@ jobs:
     steps:
     - name: Checkout repositorio
       uses: actions/checkout@v5
+
+    - name: Verificar que la rama release no existe
+      run: |
+        VERSION="${{ needs.check-release.outputs.version }}"
+        RELEASE_BRANCH="release/$VERSION"
+        
+        if git ls-remote --heads origin $RELEASE_BRANCH | grep -q $RELEASE_BRANCH; then
+          echo "Error: La rama $RELEASE_BRANCH ya existe"
+          exit 1
+        fi
+        echo "La rama $RELEASE_BRANCH no existe, se puede crear"
