--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -52,7 +52,7 @@ jobs:
   unit-testing:
     name: Verificar pruebas unitarias
     runs-on: ubuntu-latest
-    needs: check-release
+    needs: create-release
     
     steps:
     - name: Configuración de entorno desarrollo python
