Prueba con merge

--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -83,9 +83,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Correr pruebas
-      id: correr-pruebas
-      run: python -m unittest discover -s tests -v 
+    #- name: Correr pruebas
+    #  id: correr-pruebas
+    #  run: python -m unittest discover -s tests -v
 
   combine-with-main:
     name: Mezclar contra main
@@ -103,11 +103,10 @@ jobs:
 
         echo "Actualizando rama main"
 
-        git checkout main
-        git pull origin main
+        git checkout master
+        git pull origin master
 
-        git merge RELEASE_BRANCH
-        git push origin main 
+        git merge $RELEASE_BRANCH
+        git push origin master 
 
         echo "Rama main actualizada exitosamente con $RELEASE_BRANCH"
-
