--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -67,7 +67,7 @@ jobs:
   unit-testing:
     name: Verificar pruebas unitarias
     runs-on: ubuntu-latest
-    needs: create-release
+    needs: [check-release, create-release]
     
     steps:
     - name: Checkout de repositorio
@@ -90,7 +90,7 @@ jobs:
   combine-with-main:
     name: Mezclar contra main
     runs-on: ubuntu-latest
-    needs: unit-testing
+    needs: [check-release, create-release, unit-testing]
 
     steps:
       - uses: actions/checkout@master
