Creación merge automatico mejoras merge [run-release:1.1.6]

--- a/.github/workflows/pipeline_main.yml
+++ b/.github/workflows/pipeline_main.yml
@@ -100,7 +100,7 @@ jobs:
         with:
           type: now
           from_branch: release/${{ needs.check-release.outputs.version }}
-          target_branch: main
+          target_branch: master
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
 
